[gd_scene load_steps=7 format=3 uid="uid://ceq4aimroumar"]

[ext_resource type="Script" path="res://scripts/run_gun/powerups/rapid_fire.gd" id="1_ldc41"]
[ext_resource type="Texture2D" uid="uid://csccedf0evor1" path="res://assets/Legacy Collection/Legacy Collection/Assets/Packs/grotto_escape_pack/Base pack/Spritesheets/items.png" id="2_o8y3a"]
[ext_resource type="AudioStream" uid="uid://drkwnnmgomhcf" path="res://assets/Anunay's Sounds/itempickup.wav" id="3_h1j1a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yu58o"]
atlas = ExtResource("2_o8y3a")
region = Rect2(32, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_lte2k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yu58o")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_20f7a"]
radius = 11.0

[node name="RapidFire" type="Node2D"]
script = ExtResource("1_ldc41")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_lte2k")

[node name="ItemPickUpArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemPickUpArea"]
position = Vector2(1, 1)
shape = SubResource("CircleShape2D_20f7a")

[node name="Timer" type="Timer" parent="."]
wait_time = 7.5
one_shot = true

[node name="ItemPickUpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_h1j1a")
volume_db = -10.0

[connection signal="body_entered" from="ItemPickUpArea" to="." method="_on_item_pick_up_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
